Fix spacing in tweet ideas

--- a/sass/modules/widgets/_tweet_ideas.scss
+++ b/sass/modules/widgets/_tweet_ideas.scss
@@ -15,7 +15,7 @@
             li {
                 position: relative;
                 margin: 10px 0;
-                padding: 0 0 10px 70px;
+                padding: 0 0 10px 90px;
 
                 border-bottom: dashed 1px $border;
 
